# cas-game

./: Cargo.toml  rust-toolchain.toml
.github/workflows/: ci.yml
engine/: Cargo.toml
engine/src/: animation.rs  atlas.rs  grid.rs  lib.rs  map.rs  prelude.rs  render.rs
engine/src/atlas/: system.rs  texture.rs
engine/src/map/: asset.rs  generator.rs
engine/src/tile_map/: asset.rs  wall.rs
game/: Cargo.toml
game/assets/rooms/: E.room  ES.room  EW.room  EWS.room  N.room  NE.room  NES.room  NEW.room  NEWS.room  NS.room  NW.room  NWS.room  S.room  W.room  WS.room  test.room
game/src/: main.rs
src/: animation.rs  atlas.rs  atlast.rs  grid.rs  lib.rs  main.rs  player.rs  prelude.rs  tile_map.rs  tilemap.rs
src/atlas/: system.rs  texture.rs
src/tile_map/: asset.rs
src/tilemap/: wall.rs
