[package]
name = "bevy_test"
version = "0.1.0"
edition = "2021"

[lints.clippy]
new_ret_no_self = "allow"

[dependencies]
rand = "0.8.5"

[dependencies.bevy]
version = "0.15.0"
# Disable the default features if there are any that you do not want
default-features = false

features = [
  "animation",
  "bevy_asset",
  "bevy_audio",
  "bevy_color",
  "bevy_core_pipeline",
  "bevy_gizmos",
  "bevy_picking",
  "bevy_render",
  "bevy_scene",
  "bevy_sprite",
  "bevy_sprite_picking_backend",
  "bevy_state",
  "bevy_text",
  "bevy_ui",
  "bevy_ui_picking_backend",
  "bevy_window",
  "bevy_winit",
  "png",
  "custom_cursor",
  "default_font",
  "multi_threaded",
  "sysinfo_plugin",
  "vorbis",
  "webgl2",
  "x11",
]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
